--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "gobang",
+  "name": "Gomoku",
   "version": "0.0.1",
-  "description": "gobang game",
+  "description": "go-moku game",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/tsc --sourcemap"
   },
   "keywords": [
-    "gobang"
+    "gomoku",
+    "game"
   ],
   "author": "DongdongWang",
   "license": "MIT",
