--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^2.1.5"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1"
   }
 }
