完成了历史记录的功能

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "DongdongWang",
   "license": "MIT",
   "devDependencies": {
+    "@types/jquery": "^2.0.40",
     "typescript": "^2.1.5"
   },
   "dependencies": {
